manifests/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forminit-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: forminit.vishnuverse.xyz
      http:
        paths:
          - path: /api/?(*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /?(*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
